# dvst-hello

./: .gitignore  package-lock.json  package.json
src/client/: hello_world.ts  main.ts
src/hello/src/: lib.rs
src/hello1/src/: lib.rs
src/hello2/src/: lib.rs
src/invoker/: Cargo.toml
src/invoker/src/: lib.rs
src/invoker1/: Cargo.toml
src/invoker1/src/: lib.rs
src/program-invoker/: Cargo.toml
src/program-invoker/src/: lib.rs
src/program-rust1/: Cargo.toml
src/program-rust1/src/: lib.rs
src/program-rust2/: Cargo.toml
src/program-rust2/src/: lib.rs
